# Youtube_RAG_Chatbot

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  cookies.txt  demo.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
artifacts/faiss_index/: index.faiss  index.pkl
backend/: main.py
backend/routes/: chat.py
config/: settings.py
entity/: artifact_entity.py  config_entity.py
frontend/: app.py
pipeline/: rag_pipeline.py
src/chains/: rag_chain.py
src/embeddings/: embedding_model.py
src/entity/: config_entity.py
src/ingestion/: youtube_loader.py
src/logger/: __init__.py
src/prompts/: templates.py
src/retriever/: retriever.py
src/text_splitter/: text_splitter.py
src/vector_store/: faiss_store.py
