[project]
name = "youtube-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
]
